# termux-app

./: .gitignore  ACTIVE_TRANSCRIPT_ROWS_BUG_FIX.md  ACTIVE_TRANSCRIPT_ROWS_FIX_REPORT.md  COLOR_JAVA_CLEANUP_COMPLETE.md  COLOR_MIGRATION_COMPLETE.md  CRASH_FIX_REPORT.md  DEADLOCK_ANALYSIS.md  DECSET_AND_CLONE_BUG_ANALYSIS.md  DECSET_FIX_STRATEGY.md  ENABLE_FULL_TAKEOVER_GUIDE.md  FIX_REPORT_VTE_AND_CORE.md  GEMINI.md  HARDCODED_PARAMS_DEFAULTS_ISSUE.md  JAVA_CLEANUP_EVALUATION.md  JAVA_RESIZE_REPLICATION.md  JAVA_RUST_IMPLEMENTATION_COMPARISON.md  JAVA_RUST_INTERACTION_INVENTORY.md  JAVA_RUST_MIGRATION_ANALYSIS.md  JAVA_RUST_MISMATCH_ANALYSIS.md  JAVA_RUST_SYNC_ANALYSIS.md  JAVA_SIXEL_RENDERER_DETAILED_ANALYSIS.md  JAVA_VS_RUST_COMPARISON.md  KEYHANDLER_INTEGRATION_COMPLETE.md  KEYHANDLER_MIGRATION_COMPLETE.md  LINUX_KERNEL_SOLUTION.md  MISSING_FEATURES_ANALYSIS.md  OFFICIAL_JAVA_COMPARISON.md  PERFORMANCE_COMPARISON.md  REFACTORING_ANALYSIS.md  RUST_MIGRATION_STATUS.md  RUST_VS_UPSTREAM_COMPARISON.md  SCREEN_CONTENT_LOSS_ANALYSIS.md  SCROLL_ANALYSIS_FINAL.md  SCROLL_DISPLAY_ANALYSIS.md  SENTINEL_PLAN_DRAFT.md  SIXEL_CLEAR_SCREEN_SYNC_FIX.md  SIXEL_JAVA_INTEGRATION_REPORT.md  SIXEL_MISSING_FEATURES_ANALYSIS.md  SIXEL_SCALING_OPTIMIZATION_REPORT.md  SIXEL_SCROLL_SYNC_FIX.md  (+9 more)
.github/workflows/: compare-engines.yml  debug_build.yml  dependency-submission.yml  fast_build.yml  run_tests.yml  rust-ci.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt
app/src/main/java/com/termux/app/: BootstrapExtractor.java  RunCommandService.java  TermuxActivity.java  TermuxApplication.java  TermuxInstaller.java  TermuxOpenReceiver.java  TermuxService.java
app/src/main/java/com/termux/filepicker/: TermuxDocumentsProvider.java
app/src/main/res/layout/: activity_termux.xml  view_terminal_toolbar_extra_keys.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: root_preferences.xml  shortcuts.xml  termux_api_preferences.xml  termux_float_preferences.xml  termux_preferences.xml  termux_tasker_preferences.xml  termux_widget_preferences.xml
app/src/test/java/com/termux/app/: TermuxActivityTest.java
buildSrc/: build.gradle
buildSrc/src/main/groovy/com/termux/rust/: RustAndroidPlugin.groovy
docs/: JAVA_RUST_MIGRATION_PROGRESS.md  JAVA_RUST_STATEMACHINE_COMPARISON.md  RUST_JAVA_CALLBACK_IMPLEMENTATION.md  SHARED_MEMORY_ALIGNMENT_TESTING.md  java-rust-performance-comparison.md  rust-consistency-testing.md  rust-integration-status.md
docs/sentinel/: libsentinel.rs  termux_client_abstract.rs  termux_client_thread.rs  termux_daemon.rs  termux_daemon_abstract.rs
scripts/: compare-performance.sh
terminal-emulator/: build.gradle
terminal-emulator/src/androidTest/java/com/termux/terminal/: ConsistencyTest.java
terminal-emulator/src/main/: AndroidManifest.xml
terminal-emulator/src/main/java/com/termux/terminal/: ByteQueue.java  ByteQueue.kt  JNI.java  JNI.kt  JavaTerminalBuffer.java  JavaTerminalEmulator.java  JavaTerminalRow.java  KeyHandler.java  Logger.java  RustEngineCallback.java  RustEngineCallback.kt  RustTerminal.kt  TerminalBuffer.java  TerminalBufferCompat.java  TerminalColorScheme.java  TerminalColors.java  TerminalEmulator.java  TerminalEmulator.kt  TerminalOutput.java  TerminalOutput.kt  TerminalRow.java  TerminalSession.java  TerminalSession.kt  TerminalSessionClient.java  TerminalSessionClient.kt  TestJni.java  WcWidth.kt  (+3 more)
terminal-emulator/src/main/jni/: Android.mk  CMakeLists.txt  vulkan_renderer.cpp
terminal-emulator/src/main/rust/: CHANGELOG_OPTIMIZATIONS.md  Cargo.toml  RUST_OPTIMIZATION_PLAN.md  STAGE2_COMPLETION_REPORT.md
terminal-emulator/src/main/rust/.cargo/: config.toml
terminal-emulator/src/main/rust/examples/: standalone_test.rs  terminal_demo.rs
terminal-emulator/src/main/rust/skia-binaries/skia-binaries/: bindings.rs  key.txt
terminal-emulator/src/main/rust/src/: bootstrap.rs  coordinator.rs  engine.rs  engine.rs.new  fastpath.rs  jni_bindings.rs  lib.rs  pty.rs  render_thread.rs  renderer.rs  terminal_engine.rs  utils.rs  vte_parser.rs  vulkan_context.rs  wcwidth.rs
terminal-emulator/src/main/rust/src/engine/: context.rs  decset.rs  events.rs  key_event.rs  mod.rs  perform_handler.rs  sgr.rs  shared_buffer.rs  state.rs
terminal-emulator/src/main/rust/src/jni/: mod.rs  terminal_emulator.rs  terminal_view.rs  utils.rs
terminal-emulator/src/main/rust/src/terminal/: colors.rs  cursor.rs  key_handler.rs  mod.rs  modes.rs  screen.rs  screen_java_style.rs  sixel.rs  style.rs
terminal-emulator/src/main/rust/src/terminal/handlers/: control.rs  csi.rs  esc.rs  mod.rs  osc.rs  print.rs
terminal-emulator/src/main/rust/standalone/: Cargo.toml
terminal-emulator/src/main/rust/standalone/src/: main.rs  terminal_engine.rs  verify_engine.rs  vte_parser.rs
terminal-emulator/src/main/rust/tests/: analyze_exceptions.rs  block_coverage_test.rs  block_element_render_test.rs  calibration_production.db  check_width.rs  clear_screen_test.rs  consistency.rs  content_overflow_test.rs  crlf_test.rs  extended_features.rs  extreme_content_stress.rs  fix_verification.rs  flat_buffer_test.rs  font_calibration.rs  gemini_compat_test.rs  gemini_state_soak_test.rs  inverse_video_test.rs  key_event_handling.rs  lnm_problems.rs  lnm_test.rs  lnm_verify.rs  logger_smoke_test.rs  logo_render_chain_test.rs  mismatch_verification.rs  multi_session_concurrency.rs  osc_escape_test.rs  performance.rs  phantom_thread_test.rs  reflow_600_lines.rs  reflow_stress.rs  reflow_trap_repro.rs  render_deadlock_test.rs  resize_benchmark.rs  resize_column_change.rs  resize_history_bug.rs  resize_history_debug.rs  resize_zoom_simulation.rs  screen_expand_content_loss.rs  selection_color_test.rs  selection_pipeline_test.rs  (+24 more)
terminal-view/: build.gradle
terminal-view/src/main/: AndroidManifest.xml
termux-shared/: build.gradle
termux-shared/src/main/: AndroidManifest.xml
termux-shared/src/main/res/values/: strings.xml
termux-shared/src/main/res/values-zh-rCN/: strings.xml
(+196 files in other folders)
