[package]
name = "termux-rust-new"
version = "0.1.0"
edition = "2024"

[lib]
name = "termux_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21.1"
unicode-width = "0.2.2"
nix = { version = "0.31.2", features = ["process", "signal", "term", "ioctl", "fs", "user"] }
libc = "0.2"
rayon = "1.11.0"
simdutf8 = "0.1.4"
base64 = "0.22.1"
zip = "8.2.0"
once_cell = "1.19.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true

# 测试配置
[[test]]
name = "consistency"
path = "tests/consistency.rs"

[[test]]
name = "extended_features"
path = "tests/extended_features.rs"

[[test]]
name = "performance"
path = "tests/performance.rs"
