[package]
name = "termux-rust-new"
version = "0.1.0"
edition = "2024"

[lib]
name = "termux_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "termux-rust-engine"
path = "standalone/src/main.rs"

[dependencies]
jni = "0.21.1"
unicode-width = "0.2.2"
nix = { version = "0.31.2", features = ["process", "signal", "term", "ioctl", "fs", "user"] }
libc = "0.2"
rayon = "1.11.0"
simdutf8 = "0.1.4"
base64 = "0.22.1"
zip = "8.2.0"
once_cell = "1.19.0"
crossterm = "0.28.1"
log = "0.4"
android_logger = "0.13"
skia-safe = { version = "0.80.0", features = ["vulkan"] }

[dev-dependencies]
md5 = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true

# 测试配置
[[test]]
name = "consistency"
path = "tests/consistency.rs"

[[test]]
name = "extended_features"
path = "tests/extended_features.rs"

[[test]]
name = "performance"
path = "tests/performance.rs"

[[test]]
name = "check_width"
path = "tests/check_width.rs"

[[test]]
name = "fix_verification"
path = "tests/fix_verification.rs"

[[test]]
name = "key_event_handling"
path = "tests/key_event_handling.rs"
