[package]
name = "termux-terminal"
version = "0.1.0"
edition = "2024"
description = "Standalone terminal emulator using Rust engine"

[[bin]]
name = "term"
path = "src/main.rs"

[dependencies]
# 终端 UI 处理
crossterm = "0.28.1"
unicode-width = "0.2.2"

# 工具库
libc = "0.2"
nix = { version = "0.31.2", features = ["process", "signal", "term", "ioctl", "fs", "user", "poll"] }

# 字符编码
simdutf8 = "0.1.4"

# 线程和并发
rayon = "1.11.0"

# 剪贴板支持（可选）
arboard = { version = "3.4.0", optional = true, default-features = false, features = ["wayland-data-control"] }

[features]
default = []
clipboard = ["arboard"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
